# AlphaForge

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: a-stock-data  company-analyzer  (+8 more)
config/: agent_review_schema.json  markets.yaml  policy.yaml  providers.yaml  report_policy.json  schedules.yaml  theme_pool.json
docs/: AGENTS.md  architecture-design.md
loop_os/: AGENTS.md  __init__.py  report_curation.py  report_router.py  reporting.py
playbooks/: article-digest.md  decision-gate.md  industry-chain.md
providers/: AGENTS.md
requirements/: vibe-trading.in  vibe-trading.txt
scripts/: backfill_theme_report_quality_structure.py  generate_physical_ai_chain_report.py  generate_theme_deep_report.py  install_hooks.sh  pre_commit_hook.sh  run_full_loop.py  run_harness.py  run_provider_smoke.py  run_theme_pool_reports.py  run_vibe_trading_agent.py
skills/: README.md
state/: catalysts.json  paper-portfolio.json  research-state.json  system-health.json  watchlist.json
tests/: test_agent_review.py  test_backfill_theme_report_quality_structure.py  test_candidate_market_data.py  test_capability_chain.py  test_evidence_contract.py  test_external_provider_loop_integration.py  test_generic_theme_deep_report.py  test_harness.py  test_latest_publish.py  test_packet_contract.py  test_pdf_text_provider.py  test_provider_fallbacks.py  test_report_policy_config.py  test_report_review_agent.py  test_report_router.py  test_state_files.py  test_state_update.py  test_theme_report_write_policy.py  test_tushare_provider.py
(+924 files in other folders)
