[project]
name = "research-os"
version = "0.1.0"
description = "Local-first AI investment research loop OS."
requires-python = ">=3.11"
dependencies = [
    "adata>=2.9.5",
    "akshare>=1.18.64",
    "baostock>=0.9.2",
    "efinance>=0.5.8",
    "pillow>=12.3.0",
]

[project.scripts]
research-os-harness = "scripts.run_harness:main"
research-os-provider-smoke = "scripts.run_provider_smoke:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
